# platform-sample

./: CMakeLists.txt  README.md  android_run.py
cmake/: x86_64.clang.toolchain.cmake  x86_64.gcc.toolchain.cmake
func/: CMakeLists.txt
socket/: CMakeLists.txt  Logger.cpp  Logger.hpp  MySocket.hpp
socket/epoll/: MySocket.cpp
socket/kevent/: MySocket.cpp
socket/select/: MySocket.cpp
tests/: CMakeLists.txt  MySocketTest.cpp  MyThreadTest.cpp
thread/: CMakeLists.txt  MyThread.cpp  MyThread.hpp
